lostCTRL/force-app/main/default/objects/Product_images__c/Product_images__c.object-meta.xml
<CustomObject>
    <label>Product images</label>
    <nameField>
        <displayFormat>img-{0000}</displayFormat>
        <label>Product images Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product images</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>