lostCTRL/force-app/main/default/objects/Product_images__c/fields/base__c.field-meta.xml
<CustomField>
    <fullName>base__c</fullName>
    <label>base</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>