lostCTRL/force-app/main/default/objects/Product_images__c/fields/image__c.field-meta.xml
<CustomField>
    <fullName>image__c</fullName>
    <label>image</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>