lostCTRL/force-app/main/default/objects/Product_images__c/fields/Is_main_image__c.field-meta.xml
<CustomField>
    <fullName>Is_main_image__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is main image</label>
    <type>Checkbox</type>
</CustomField>