lostCTRL/force-app/main/default/objects/Product_images__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product images</relationshipLabel>
    <relationshipName>Product_images</relationshipName>
    <type>Lookup</type>
</CustomField>